--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
+<link rel="icon"
+      type="image/png"
+      href="/myicon.png" />
 <meta charset="utf-8">
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <style type="text/css">
@@ -23,11 +26,50 @@ div.tooltip {
 	border-radius: 8px;
 	pointer-events: none;
 }
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 100%; /* Full-width */
+  height: 25px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #4CAF50; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #4CAF50; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
 
 /* Legend Font Style */
 body {
 	font: 11px sans-serif;
 }
+
 
 /* Legend Position Style */
 .legend {
@@ -39,6 +81,11 @@ body {
 </style>
 </head>
 <body>
+<div class="slidecontainer">
+  <input type="range" min="1976" max="2016" value="2016" class="slider" id="myRange">
+  <p>Election Year: <span id="demo"></span></p>
+</div>
+
 <script type="text/javascript">
 
 /*  This visualization was made possible by modifying code provided by:
@@ -51,7 +98,6 @@ http://www.d3noob.org/2013/01/adding-tooltips-to-d3js-graph.html
 
 Mike Bostock, Pie Chart Legend
 http://bl.ocks.org/mbostock/3888852  */
-
 
 //Width and height of map
 var width = 960;
@@ -69,15 +115,10 @@ var path = d3.geo.path()               // path generator that will convert GeoJS
 
 // Define linear scale for output
 var color = d3.scale.linear()
-			  .range(["rgb(213,222,217)","rgb(69,173,168)","rgb(84,36,55)","rgb(217,91,67)"]);
+			  .range(["rgb(0,255,0)","rgb(255,0,0)","rgb(0,0,255)"]);
 
-var legendText = ["Cities Lived", "States Lived", "States Visited", "Nada"];
+var legendText = ["Democratic Victory", "Republican Victory", "Other Victory"];
 
-//Create SVG element and append map to the SVG
-var svg = d3.select("body")
-			.append("svg")
-			.attr("width", width)
-			.attr("height", height);
 
 // Append Div for tooltip to SVG
 var div = d3.select("body")
@@ -85,97 +126,32 @@ var div = d3.select("body")
     		.attr("class", "tooltip")
     		.style("opacity", 0);
 
-// Load in my states data!
-d3.csv("stateslived.csv", function(data) {
-color.domain([0,1,2,3]); // setting the range of the input data
+
+// Load in states data!
+d3.csv("1976-2016-president.csv", function(data) {
+color.domain([0,1,2]); // setting the range of the input data
 
 // Load GeoJSON data and merge with states data
 d3.json("us-states.json", function(json) {
 
-// Loop through each state data value in the .csv file
-for (var i = 0; i < data.length; i++) {
 
-	// Grab State Name
-	var dataState = data[i].state;
+  // Slider code
+  var slider = document.getElementById("myRange");
+  var output = document.getElementById("demo");
+  var year = 2016; // Display the default slider value
 
-	// Grab data value
-	var dataValue = data[i].visited;
+  output.innerHTML = slider.value; // Display the default slider value
+  visualize(data, json, year); // Display the default map
 
-	// Find the corresponding state inside the GeoJSON
-	for (var j = 0; j < json.features.length; j++)  {
-		var jsonState = json.features[j].properties.name;
+  // Update the current slider value (each time you drag the slider handle)
+  slider.oninput = function() {
+    output.innerHTML =  Math.ceil(this.value/4.0) * 4;
+    year = Math.ceil(this.value/4.0) * 4;
+    console.log(year);
+    visualize(data, json, year);
+    d3.select("svg").remove();
+  }
 
-		if (dataState == jsonState) {
-
-		// Copy the data value into the JSON
-		json.features[j].properties.visited = dataValue;
-
-		// Stop looking through the JSON
-		break;
-		}
-	}
-}
-
-// Bind the data to the SVG and create one path per GeoJSON feature
-svg.selectAll("path")
-	.data(json.features)
-	.enter()
-	.append("path")
-	.attr("d", path)
-	.style("stroke", "#fff")
-	.style("stroke-width", "1")
-	.style("fill", function(d) {
-
-	// Get data value
-	var value = d.properties.visited;
-
-	if (value) {
-	//If value exists…
-	return color(value);
-	} else {
-	//If value is undefined…
-	return "rgb(213,222,217)";
-	}
-});
-
-
-// Map the cities I have lived in!
-d3.csv("cities-lived.csv", function(data) {
-
-svg.selectAll("circle")
-	.data(data)
-	.enter()
-	.append("circle")
-	.attr("cx", function(d) {
-		return projection([d.lon, d.lat])[0];
-	})
-	.attr("cy", function(d) {
-		return projection([d.lon, d.lat])[1];
-	})
-	.attr("r", function(d) {
-		return Math.sqrt(d.years) * 4;
-	})
-		.style("fill", "rgb(217,91,67)")
-		.style("opacity", 0.85)
-
-	// Modification of custom tooltip code provided by Malcolm Maclean, "D3 Tips and Tricks"
-	// http://www.d3noob.org/2013/01/adding-tooltips-to-d3js-graph.html
-	.on("mouseover", function(d) {
-    	div.transition()
-      	   .duration(200)
-           .style("opacity", .9);
-           div.text(d.place)
-           .style("left", (d3.event.pageX) + "px")
-           .style("top", (d3.event.pageY - 28) + "px");
-	})
-
-    // fade out tooltip on mouse out
-    .on("mouseout", function(d) {
-        div.transition()
-           .duration(500)
-           .style("opacity", 0);
-    });
-});
 
 // Modified Legend Code from Mike Bostock: http://bl.ocks.org/mbostock/3888852
 var legend = d3.select("body").append("svg")
@@ -202,6 +178,71 @@ var legend = d3.select("body").append("svg")
 	});
 
 });
+
+var visualize = function(data, json, year) {
+  //Create SVG element and append map to the SVG
+  var svg = d3.select("body")
+  			.append("svg")
+  			.attr("width", width)
+  			.attr("height", height);
+
+  //Election year being analyzed
+  var prevEntryState = "";
+
+  // Loop through each state data value in the .csv file
+  for (var i = 0; i < data.length; i++) {
+
+  		if (data[i].year == year && data[i].state != prevEntryState) {
+  			// Grab State Name
+  			var dataState = data[i].state;
+        prevEntryState = dataState;
+  			// Grab data value
+  			var dataValue = data[i].party;
+
+  			// Find the corresponding state inside the GeoJSON
+  			for (var j = 0; j < json.features.length; j++)  {
+  				var jsonState = json.features[j].properties.name;
+
+  				if (dataState == jsonState) {
+
+  				// Copy the data value into the JSON
+          if (dataValue.includes("republican")) {
+            json.features[j].properties.party = 1;
+          } else if (dataValue.includes("democrat")) {
+            json.features[j].properties.party = 2;
+          } else {
+            json.features[j].properties.party = -1;
+          }
+  				// Stop looking through the JSON
+  				break;
+  				}
+  			}
+  		}
+
+  }
+  // Bind the data to the SVG and create one path per GeoJSON feature
+  svg.selectAll("path")
+  	.data(json.features)
+  	.enter()
+  	.append("path")
+  	.attr("d", path)
+  	.style("stroke", "#fff")
+  	.style("stroke-width", "1")
+  	.style("fill", function(d) {
+
+  	// Get data value
+  	var value = d.properties.party;
+
+  	if (value) {
+  	//If value exists…
+  	return color(value);
+  	} else {
+  	//If value is undefined…
+  	return "rgb(213,222,217)";
+  	}
+  });
+
+}
 </script>
 </body>
 </html>
